# NYC-Micromobility-Risk-Assessment

./: .gitignore  Harmonizing_CitiBike.md  README.md  pyproject.toml  run_analysis.py
docs/uml/: architecture_overview.wsd  layer_logic_details.wsd  sequence_deep_dive.wsd
scripts/: debug_plot.py  ingest_data.py
src/: __init__.py  config.py
src/exploration/: citibike_analysis.py  collision_analysis.py  risk_analysis.py
src/features/: build_features.py
src/graph/: trip_network.py
src/ingest/: fetcher.py  processor.py
src/models/: safety_clustering.py
src/utils/: db.py
